k8s/llamapipeline/llamapipeline-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llamapipeline
  namespace: llama
  labels:
    app: llamapipeline
spec:
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  selector:
    app: llamapipeline
  type: ClusterIP
